# conversational-tree-search

./: .gitignore  README.md  analysis.ipynb  analyze_distribution.ipynb  chat_terminal.py  config.py  continue_training.py  dataset_stats.ipynb  debug.ipynb  disable_disk_cache.sh  env.sh  eval_baseline.py  eval_jointdatamodel.py  evaluate.py  generation_answers.ipynb  generation_questions.ipynb  guided_error_analysis.ipynb  merge_datasets.ipynb  plot_deviation_jointdata.ipynb  realusertest.ipynb  requirements.txt  resume_checkpoint.py  server.py  start_cache.sh  start_training.py  test.ipynb  test_answers.json  test_answers_en.json  test_graph.json  test_graph_en.json  train.py  train_answers.json  train_answers_en.json  train_chatbot.py  train_chatbot_jointdata.py  train_graph_en.json  traintest_answers.json  traintest_answers_en.json  traintest_graph_en.json
algorithm/: algorithm.py  evaluation.py
chatbot/adviser/app/rl/simulator/: Cargo.toml  pyproject.toml
chatbot/adviser/app/rl/simulator/src/: data.rs  lib.rs  parsers.rs  simulator.rs
chatbot/adviser/app/rl/simulator/src/data/: json.rs  types.rs
chatbot/adviser/app/rl/simulator/src/parsers/: answerParser.pest  answer_parser.rs  logicParser.pest  logic_parser.rs  systemParser.pest  system_parser.rs  variables.rs
chatbot/adviser/app/rl/simulator/src/simulator/: simulator.rs
conf/: debug.yaml  default.yaml  diagnose_generated_chatgpt_v3.yaml  diagnose_generated_v3.yaml  diagnose_realdata.yaml  free.yaml  generated_v2.yaml  generated_v2_oldparams.yaml  generated_v2_paramsearch1.yaml  generated_v3.yaml  (+47 more)
(+260 files in other folders)
