[package]
name = "simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "simulator"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.16.5", features = ["extension-module"] }
serde = "1.0.144"
serde_json = "1.0.85"
serde_repr = "0.1.9"
serde-aux = "3.1.0"
pest = "2.3.0"
pest_derive = "2.3.0"
rand = "0.8.5"